--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,11 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        {% for network in site.social %}
-                        <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
-                        </li>
-                        {% endfor %}
+<!--                         {% for network in site.social %}
+                        <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a></li>
+                        {% endfor %} -->
+                        <li><a href="https://github.com/adjknowles"><i class="fa fa-github"></i></a>
+                        <li><a href="https://uk.linkedin.com/in/adjknowles"><i class="fa fa-linkedin"></i></a>
                     </ul>
                 </div>
                 <div class="col-md-4">
