--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -18,16 +18,18 @@
                             <p>{{ post.description }}</p>
                             <p><strong>Tech: </strong>{{ post.technology }}</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">{{ post.client }}</a>
+                                <li>Code:
+                                    <strong><a href="{{ post.code }}">CLICK HERE</a>
                                     </strong>
                                 </li>
+                                <li>Website:
+                                    <strong><a href="{{ post.website }}">CLICK HERE</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong>{{ post.project-date }}</strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">{{ post.category }}</a>
-                                    </strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
