--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Me</h2>
-                    <img class="img-responsive" src="img/profilephoto.jpeg" alt="">
+                    <img class="profile-photo img-responsive" src="img/profilephoto.jpeg" alt="">
                     <h4>email: </h4>
                 </div>
             </div>
