--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,16 +19,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#services">Skills</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
+<!--                         <a class="page-scroll" href="#team">Team</a> -->
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
