Changed styling of header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,9 +44,22 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Alastair Knowles</div>
                 <div class="intro-lead-in">Web Developer</div>
-                <a href="#services" class="page-scroll btn btn-xl">Find Out More</a>
+                <hr>
+                <div class="intro-heading">Alastair Knowles</div>
+                <h5 class="about-text">
+                    I’m a music graduate and passionate traveller with six years life experience in New Zealand. Having returned to the UK a couple of years ago, I have been in search of a new and exciting challenge.
+                </h5>
+                <h5 class="about-text">
+                    I have always been eager to delve into the latest technologies, whatever they may be, and I love to see how things work. With this - and an introduction to General Assembly by a friend - Web Development and the WDI course caught my eye. 
+                </h5>
+                <h5 class="about-text">
+                    Even though the course has been very intense and challenging, it has provided me with an excellent foundation in the languages and frameworks that help build the web, whilst also teaching me how to learn programming, and I know that this will prove to be the greatest asset, as I continue to learn and progress independently.
+                </h5>
+                <h5 class="about-text">
+                    I am now looking to join a team where I can utilise these new skills, and to continue on the path to becoming a great web developer.
+                </h5>
+                <a href="#about" class="page-scroll btn btn-xl">Find Out More</a>
             </div>
         </div>
     </header>
