--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -15,6 +15,10 @@ body {
     margin: 0 auto;
 }
 
+.about-text {
+    font-size: 17px;
+}
+
 .text-muted {
     color: #777;
 }
@@ -304,7 +308,7 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px) {
     header .intro-text {
-        padding-top: 300px;
+        padding-top: 150px;
         padding-bottom: 200px;
     }
 
