--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -17,6 +17,7 @@ body {
 
 .about-text {
     font-size: 17px;
+    color: #fec503;
 }
 
 .text-muted {
@@ -309,11 +310,11 @@ header .intro-text .intro-heading {
 @media(min-width:768px) {
     header .intro-text {
         padding-top: 150px;
-        padding-bottom: 200px;
+        padding-bottom: 315px;
     }
 
     header .intro-text .intro-lead-in {
-        margin-bottom: 25px;
+        margin-bottom: 125px;
         font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 40px;
         font-style: italic;
