--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,10 +44,12 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Web Developer</div>
-                <hr>
                 <div class="intro-heading">Alastair Knowles</div>
-                <h5 class="about-text">
+                <hr>
+                <div class="intro-lead-in">Web Developer</div>
+
+                
+<!--                 <h5 class="about-text">
                     I’m a music graduate and passionate traveller with six years life experience in New Zealand. Having returned to the UK a couple of years ago, I have been in search of a new and exciting challenge.
                 </h5>
                 <h5 class="about-text">
@@ -58,7 +60,7 @@
                 </h5>
                 <h5 class="about-text">
                     I am now looking to join a team where I can utilise these new skills, and to continue on the path to becoming a great web developer.
-                </h5>
+                </h5> -->
                 <a href="#about" class="page-scroll btn btn-xl">Find Out More</a>
             </div>
         </div>
