--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,5 +1,5 @@
 <!-- Services Section -->
-    <section id="services">
+    <section id="services" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -11,10 +11,14 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-cog fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Back-End Development</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <ul class="no-bullet margin-fix">
+                            <li>Ruby / Ruby on Rails</li>
+                            <li>Node.js</li>
+                            <li></li>
+                        </ul>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,15 +26,25 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Front-End Development</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <ul class="no-bullet margin-fix">
+                            <li>HTML5 / CSS3</li>
+                            <li>JavaScript / jQuery</li>
+                            <li>Angular JS</li>
+                            <li></li>
+                        </ul>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-paint-brush fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Other Skills</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Front-End CSS Frameworks</h4>
+                        <ul class="no-bullet margin-fix">
+                            <li>Foundation</li>
+                            <li>Bootstrap</li>
+                            <li>Materialize</li>
+                            <li>Pure</li>
+                        </ul>
                 </div>
             </div>
         </div>
