--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,11 +14,12 @@
                         <i class="fa fa-cog fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Back-End Development</h4>
-                        <ul class="no-bullet margin-fix">
-                            <li>Ruby / Ruby on Rails</li>
-                            <li>Node.js</li>
-                            <li></li>
-                        </ul>
+                    <ul class="no-bullet margin-fix">
+                        <li>Ruby / Ruby on Rails</li>
+                        <li>Node.js</li>
+                        <li>SQL / MySQL</li>
+                        <li>MongoDB</li>
+                    </ul>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -26,12 +27,12 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Front-End Development</h4>
-                        <ul class="no-bullet margin-fix">
-                            <li>HTML5 / CSS3</li>
-                            <li>JavaScript / jQuery</li>
-                            <li>Angular JS</li>
-                            <li></li>
-                        </ul>
+                    <ul class="no-bullet margin-fix">
+                        <li>HTML5 / CSS3</li>
+                        <li>JavaScript / jQuery</li>
+                        <li>Angular JS</li>
+                        <li></li>
+                    </ul>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -39,12 +40,12 @@
                         <i class="fa fa-paint-brush fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Front-End CSS Frameworks</h4>
-                        <ul class="no-bullet margin-fix">
-                            <li>Foundation</li>
-                            <li>Bootstrap</li>
-                            <li>Materialize</li>
-                            <li>Pure</li>
-                        </ul>
+                    <ul class="no-bullet margin-fix">
+                        <li>Foundation</li>
+                        <li>Bootstrap</li>
+                        <li>Materialize</li>
+                        <li>Pure</li>
+                    </ul>
                 </div>
             </div>
         </div>
