Added text to about me

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -27,11 +27,12 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>2003 - 2006</h4>
+                                    <h4 class="subheading">St. Catherine's College, University of Oxford</h4>
+                                    <h5 class="subheading">B.A. in Music</h5>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">The course was broadly based but allowed for increasing specialisation and choice as I progressed. Performance and composition were prominent, but I was also able to concentrate on other areas such as music history and analysis. Whilst here I played an active part in the musical life of my college as well as the university. I really enjoyed being a part of various ensembles, both large and small.</p>
                                 </div>
                             </div>
                         </li>
@@ -41,11 +42,12 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>January 2010 - November 2012</h4>
+                                    <h4 class="subheading">Spark New Zealand</h4>
+                                    <h5 class="subheading">Customer Service / Sales Representative</h5>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">For this role, I worked directly with customers as part of the New & Move inbound call centre. As it was a sales role, I was used to working to daily, weekly and monthly sales targets, and enjoyed the challenge this brought with it. Whilst here, I was also asked to contribute to various projects within the department. These included the development of new learning material for existing as well as new colleagues.</p>
                                 </div>
                             </div>
                         </li>
@@ -55,11 +57,12 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>January 2013 - January 2014</h4>
+                                    <h4 class="subheading">Cello Teacher</h4>
+                                    <h5 class="subheading">Freelance</h5>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Provided cello lessons for students in and around the York area.</p>
                                 </div>
                             </div>
                         </li>
@@ -69,18 +72,34 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>February 2014 - August 2015</h4>
+                                    <h4 class="subheading">The Whisky Lounge / The Great Whisky Company</h4>
+                                    <h5 class="subheading">Accounts Executive</h5>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">I helped manage the everyday running of the office in York. This involved maintaining the accounts, preparing invoices for clients and managing the remittance payments. I was also responsible for ticketing of events and various logistical matters in relation to products available for sale.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-image">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>September 2015 - January 2016</h4>
+                                    <h4 class="subheading">General Assembly London</h4>
+                                    <h5 class="subheading">Web Development Immersive</h5>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">I decided to take the Web Development Immersive course partly because a friend of mine had recommended General Assembly to me, but also because I was looking for a new challenge and a complete change from what I had been doing up until that point. The thing I enjoyed most about this course was the shear variety of material that we learnt – no two days were the same! As well as learning the fundamentals of coding, I was also introduced to a number of new technologies, and I now feel confident to learn and progress independently as I endeavour to hone my skills and broaden my knowledge.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>Be Part
-                                    <br>Of Our
+                                    <br>Of My
                                     <br>Story!</h4>
                             </div>
                         </li>
