--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -512,8 +512,8 @@ section h3.section-subheading {
     border: 7px solid #f1f1f1;
     border-radius: 100%;
     text-align: center;
-    color: #fff;
-    background-color: #{{ site.color.primary }};
+    color: #000;
+    background-color: #FFF;
 }
 
 .timeline>li .timeline-image h4 {
