Changed colour of final circle on timeline

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -516,6 +516,10 @@ section h3.section-subheading {
     background-color: #FFF;
 }
 
+.final-circle {
+    background-color: #{{ site.color.primary }} !important;
+}
+
 .timeline>li .timeline-image h4 {
     margin-top: 12px;
     font-size: 10px;
