--- a/_includes/about.html
+++ b/_includes/about.html
@@ -97,7 +97,7 @@
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image">
+                            <div class="timeline-image final-circle">
                                 <h4>Be Part
                                     <br>Of My
                                     <br>Story!</h4>
