--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,16 +5,16 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
                     <h3 class="section-subheading text-muted">
-                        I’m a music graduate and passionate traveller with six years life experience in New Zealand. Having returned to the UK a couple of years ago, I have been in search of a new and exciting challenge.
+                        I’m a music graduate and passionate traveller with six years life experience in New Zealand. Having returned to the UK, I have been in search of a new and exciting challenge.
                     </h3>
                     <h3 class="section-subheading text-muted">
                         I have always been eager to delve into the latest technologies, whatever they may be, and I love to see how things work. With this - and an introduction to General Assembly by a friend - Web Development and the WDI course caught my eye. 
                     </h3>
                     <h3 class="section-subheading text-muted">
-                        Even though the course has been very intense and challenging, it has provided me with an excellent foundation in the languages and frameworks that help build the web, whilst also teaching me how to learn programming, and I know that this will prove to be the greatest asset, as I continue to learn and progress independently.
+                        Even though the course was very intense and challenging, it provided me with an excellent foundation in the languages and frameworks that help build the web, whilst also teaching me how to learn programming, and I know that this will prove to be the greatest asset, as I continue to learn and progress independently.
                     </h3>
                     <h3 class="section-subheading text-muted">
-                        I am now looking to join a team where I can utilise these new skills, and to continue on the path to becoming a great Web Developer.
+                        Having found my first role as a Junior Web Developer with Jigsaw Clothing, I am really enjoying my journey so far into web development, and I can’t wait to see what the future may hold!
                     </h3>
                 </div>
             </div>
