--- a/_includes/about.html
+++ b/_includes/about.html
@@ -96,6 +96,21 @@
                                 </div>
                             </div>
                         </li>
+                        <li class="timeline-image">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/jigsaw.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>March 2016 - Present</h4>
+                                    <h4 class="subheading">Jigsaw Clothing</h4>
+                                    <h5 class="subheading">Junior Web Developer</h5>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">I decided to take the Web Development Immersive course partly because a friend of mine had recommended General Assembly to me, but also because I was looking for a new challenge and a complete change from what I had been doing up until that point. The thing I enjoyed most about this course was the shear variety of material that we learnt – no two days were the same! As well as learning the fundamentals of coding, I was also introduced to a number of new technologies, and I now feel confident to learn and progress independently as I endeavour to hone my skills and broaden my knowledge.</p>
+                                </div>
+                            </div>
+                        </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image final-circle">
                                 <h4>Be Part
