--- a/_includes/about.html
+++ b/_includes/about.html
@@ -96,7 +96,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-image">
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/jigsaw.png" alt="">
                             </div>
