--- a/_includes/about.html
+++ b/_includes/about.html
@@ -98,7 +98,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/jigsaw.png" alt="">
+                                <img class="img-circle img-responsive" src="img/about/jigsaw2.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
