--- a/_includes/services.html
+++ b/_includes/services.html
@@ -29,8 +29,10 @@
                     <h4 class="service-heading">Front-End Development</h4>
                     <ul class="no-bullet margin-fix">
                         <li>HTML5 / CSS3</li>
+                        <li>Responsive Web Pages / Emails</li>
+                        <li>Adobe Creative Suite</li>
                         <li>JavaScript / jQuery</li>
-                        <li>Angular JS</li>
+                        <li>Node JS</li>
                         <li></li>
                     </ul>
                 </div>
