updated jigsaw timeline copy

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -107,7 +107,7 @@
                                     <h5 class="subheading">Junior Web Developer</h5>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I decided to take the Web Development Immersive course partly because a friend of mine had recommended General Assembly to me, but also because I was looking for a new challenge and a complete change from what I had been doing up until that point. The thing I enjoyed most about this course was the shear variety of material that we learnt – no two days were the same! As well as learning the fundamentals of coding, I was also introduced to a number of new technologies, and I now feel confident to learn and progress independently as I endeavour to hone my skills and broaden my knowledge.</p>
+                                    <p class="text-muted">For my first role as a Junior Web Developer I have come to Jigsaw Clothing, an omnichannel retailer with websites in the UK, USA and Australia. Whilst here I have had the opportunity to create and maintain responsive web pages, in addition to developing responsive emails for varying marketing campaigns across all channels. I have also instigated and implemented the use of Google Tag Manager within web pages, and have used the data captured to enhance the user experience in future development. Throughout my time here, I have acquired the knowledge for working with two different content management systems, as well as gaining a good understanding of working within an ecommerce environment.</p>
                                 </div>
                             </div>
                         </li>
